<resources>
    <string name="app_name">MyNotes</string>
    <string name="headline_4">Headline 4</string>
    <string name="headline_5">Headline 5</string>
    <string name="headline_6">Headline 6</string>
    <string name="body_1">Body 1</string>
    <string name="subtitle_1">Subtitle 1</string>
    <string name="overline">Overline</string>
    <string name="button">BUTTON</string>
    <string name="content">У вас нет заметок. "\n" Нажмите + чтобы добавить</string>
    <string name="menu_item_search">menu_item_search</string>
    <string name="headline_example">There’s gonna be a note’s headline</string>
    <string name="text_example">There’s gonna be a note’s text</string>
    <string name="date_example">There’s gonna be a note’s date</string>
    <string name="edit_header">Введите заголовок</string>
    <string name="edit_text">Введите текст</string>
    <string name="menu_action_delete">menu_action_delete</string>
    <string name="menu_action_share">menu_action_share</string>
    <string name="menu_action_add_photo">menu_action_add_photo</string>
    <string name="date_display">Изменено %s</string>
    <string name="message_alert_dialog">Вы действительно хотите удалить заметку?</string>
    <string name="button_delete">Удалить</string>
    <string name="button_cancel">Отмена</string>
    <string name="title_alert_dialog">Удаление заметки</string>
    <string name="search_hint">Search</string>
    <string name="search_screen_empty_result">Ничего не найдено</string>

</resources>