<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/edit_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/edit_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:theme="@style/toolbarColoredBackArrow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/arrow_back" />

    <View
        android:id="@+id/edit_toolbar_divider"
        style="@style/divider_toolbar"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/edit_toolbar" />

    <EditText
        android:id="@+id/edit_header"
        style="@style/headline_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/edit_header"
        android:singleLine="false"
        android:textColorHint="@color/color_hint"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/edit_toolbar_divider" />

    <TextView
        android:id="@+id/text_view_date"
        style="@style/subtitle_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:text="@string/date_display"
        app:layout_constraintBottom_toTopOf="@id/edit_header_divider"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_header" />

    <View
        android:id="@+id/edit_header_divider"
        style="@style/divider_hint"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/text_view_date" />

    <EditText
        android:id="@+id/edit_text"
        style="@style/body_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="top"
        android:hint="@string/edit_text"
        android:singleLine="false"
        android:textColorHint="@color/color_hint"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintTop_toBottomOf="@id/edit_header_divider" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="88dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/float_act_button"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/color_float_button"
            android:src="@drawable/ic_check"
            android:theme="@style/fabColoredCentralElement"
            app:layout_anchor="@id/bottom_appbar"
            app:tint="@color/white" />

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottom_appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:fabAlignmentMode="end"
            app:fabCradleMargin="0dp"
            app:fabCradleVerticalOffset="0dp"
            app:menu="@menu/bottom_nav_menu"
            tools:ignore="BottomAppBar" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>